corrigiendo title de pagina index y  productos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="shortcut icon" href="multimedia/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Panadería Pangüino</title>
+    <title>Inicio - Panadería Pangüino</title>
   </head>
   <body class="index__body" id="font">
     <!-- Inicia Header -->
