--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -13,7 +13,7 @@
     />
     <link rel="shortcut icon" href="../multimedia/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Panadería Pangüino</title>
+    <title>Productos - Panadería Pangüino</title>
   </head>
   <body class="index__productos" id="font">
     <!-- Inicia Header -->
