creacion de rama reeentrega

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <title>Inicio - Panadería Pangüino</title>
   </head>
-  <body class="index__body" id="font">
+  <body id="font">
     <!-- Inicia Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light nav-color">
